solved popup overflow problem

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -9,11 +9,10 @@ $movie-bg-color:rgb(3, 3, 17);
 body {
   background-color: $movie-bg-color;
   display: flex;
-  overflow: auto;
-  overflow-x: hidden;
   height: 100vh;
   width: 100vw;
   flex-direction: column;
+  overflow: auto;
 }
 @keyframes jumbomotion{
   0%{
@@ -70,8 +69,7 @@ main {
         top: 40px;
         left: 0;
         .description{
-          width: 50vw;
-          
+          width: 50vw;     
         }
       }
     }
@@ -87,8 +85,13 @@ main {
       margin-bottom: 5px;
       width: 100%;
       height: 30px;
+      position: sticky;
+      position: -webkit-sticky;
+      z-index: 399;
+      top: 33px;
       display: grid;
       place-items: center;
+      background-color: rgba(3, 3, 17, 0.444);
       ul>li{
         color: #ffffff82;
       }
@@ -155,6 +158,7 @@ main {
             width: 18px;
             text-align: center;
             position: absolute;
+            cursor: pointer;
             top: 3px;
             right: 3px;
             /* right: -50%;
@@ -207,26 +211,25 @@ footer {
     }
   }
 }
+
 .moviePage{
-  height: 94vh;
-  width: 100vw;
-  z-index: 20;
-  background-color: #111;
   
   .container{
     display: grid;
     grid-template-rows: 70% 30%;
     position: fixed;
-    bottom: 0;
-    height: 80vh;
+    top: 33px;
+    height: calc(100vh - 33px);
+    padding: 10px;
+    padding-top: 30px;
     width: 100vw;
-    z-index: 20;
+    z-index: 2000;
     background-color: $movie-bg-color;
     border-radius: 0 20px 0 20px;
     .movieDetails{
       display: grid;
       grid-template-rows: 60% 40%;
-      grid-template-columns: 50% 50%;
+      grid-template-columns: 30% 70%;
       .img{
         grid-area: 1/1/2/2;
         img{
@@ -237,6 +240,7 @@ footer {
       }
       .details{
         grid-area: 1/2/2/3;
+        padding: 10px;
         ul{
           margin: 5px;
           li{
@@ -254,8 +258,9 @@ footer {
   }
 }
 .close{
-  position: fixed;
-  top: 8vh;
-  right: 8vw;
   z-index: 30;
+  background-color: #111111ff;
+  position: fixed;
+  top: 33px;
+  cursor: pointer;
 }
